--- a/post/.metion/file_sort.config
+++ b/post/.metion/file_sort.config
@@ -1,7 +1,5 @@
 [
+    "\u4e8b\u5b9e.md", 
     "readme.md", 
-    "plantuml.md", 
-    "basic.md", 
-    "\u5361\u7247.md", 
-    "\u6b22\u8fce.md"
+    "plantuml.md"
 ]
