--- a/post/.metion/file_sort.config
+++ b/post/.metion/file_sort.config
@@ -2,6 +2,7 @@
     "\u7247\u8bed.md", 
     "\u4e8b\u5b9e.md", 
     "readme.md", 
+    "recoll.md", 
     "whatareyoulookingat.md", 
     "plantuml.md"
 ]
